--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -43,6 +43,8 @@ $susy: (
 @import 'partials/call-to-action';
 
 @import 'pages/index';
+@import 'pages/learner';
+@import 'pages/school';
 @import 'pages/university';
 @import 'pages/pricing';
 @import 'pages/docs';
