Add video to schools landing page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,5 +6,5 @@ layout: split
 <div>
   <%= link_to 'Learner', '/learner' %>
   <%= link_to 'School', '/school' %>
-  <%= link_to 'Universities', '/university' %>
+  <%= link_to 'University', '/university' %>
 </div>
