--- a/source/school.html.erb
+++ b/source/school.html.erb
@@ -5,16 +5,16 @@ fixed: true
 ---
 
 <section class='header-block'>
+  <a href="http://vimeo.com/141552266" class="video-link">
+    Play Video
+  </a>
+
   <h1 class="animated fadeIn">
     Teach computing. With confidence.
   </h1>
   <h2 class="animated fadeIn">
     The cloud coding & content platform for teaching computer science
   </h2>
-  <div class="action-buttons animated fadeInUp">
-    <%= link_to 'Schools', '#school-content-start', class: 'scrollto button button-large' %>
-    <%= link_to 'Universities', '/university', class: 'button button-large' %>
-  </div>
 </section>
 
 <section class="school-content">
