issue #codio-6624. seo.

--- a/source/partials/_head.erb
+++ b/source/partials/_head.erb
@@ -23,8 +23,8 @@
 
 <%= partial "structured-markup" %>
 
-<!-- Youtube verification -->
-<meta name="google-site-verification" content="ZJIthBODpvDLm7Elp9WM89B2jsUxEpMTVZQRChHgzr4" />
+<!-- for 6624_seo -->
+<meta name="google-site-verification" content="VlJcdOLd50ydmHl6VjBp69YV2790kbj31n9axTQ4NkA" />
 
 <!-- Bing verification -->
 <meta name="msvalidate.01" content="A6CDE7AE4A14B5C3BC3D34F8FC50E5F2" />
